--- a/admin/assets/scss/style.scss
+++ b/admin/assets/scss/style.scss
@@ -133,7 +133,7 @@ textarea {
 }
 
 aside.left-panel {
-    background: $menu-bg;
+    background-color: #a7a7b1;
     display: table-cell;
     height: 100vh;
     min-height: 100%;
@@ -145,7 +145,6 @@ aside.left-panel {
 }
 
 .navbar {
-    background: #272c33;
     border-radius: 0;
     border: none;
     display: block;
@@ -222,9 +221,9 @@ aside.left-panel {
 
             > a {
                 background: none !important;
-                color: #c8c9ce !important;
+                color: rgba(255,255,255,0.6);
                 display: inline-block;
-                font-family: 'Open Sans';
+                font-family: 'Open Sans', sans-serif;
                 font-size: 14px;
                 line-height: 30px;
                 padding: 10px 0;
@@ -233,14 +232,13 @@ aside.left-panel {
 
                 &:hover,
                 &:hover .menu-icon {
-                    color: #fff !important;
+                    color: rgba(255,255,255,1);
                 }
 
                 .menu-icon {
-                    color: #8b939b;
                     float: left;
                     margin-top: 8px;
-                    width: 55px;
+                    margin-right: 10px;
                     text-align: left;
                     z-index: 9;
                 }
@@ -336,6 +334,13 @@ aside.left-panel {
                 }
             }
         }
+    }
+
+    .legal {
+        color: black !important;
+        border-top: 1px solid black;
+        margin-top: 30px;
+        padding-top: 30px;
     }
 }
 
